fixed aligning of the buttons

--- a/sass/pages/_biker.scss
+++ b/sass/pages/_biker.scss
@@ -1,12 +1,10 @@
 #biker_help_btn {
-
-  margin:4rem;
+  margin:5rem;
+  display:border-box;
 }
 .biker-buttons {
     display: inline-block;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    width: 25rem;
+    width: 15em;
     height: 5rem;
 }
 
@@ -27,7 +25,7 @@
 
 .white-container{
     background-color: white;
-    margin-top: 2.5rem;
+    margin-top: 5rem;
     border-radius: 1rem;
     overflow: hidden;
     margin-bottom: 2rem;
@@ -46,8 +44,9 @@
 
 #help-is-coming {
     display: none;
-    height: 10vh;
+    height: 2vh;
 }
 #confirm-mdg{
     display: none;
 }
+
